syntax = "proto3";

package payment.v1;

option go_package = "https://github.com/Mahno9/GoMicroservicesCourse/pkg/progo/payment/v1;payment_v1";


service PaymentService {
	rpc PayOrder(PayOrderRequest) returns (PayOrderResponse) {}
}

// PaymentMethod defines the available payment methods for an order.
enum PaymentMethod {
	PAYMENT_METHOD_UNSPECIFIED = 0;
	PAYMENT_METHOD_CARD = 1;
	PAYMENT_METHOD_SBP = 2;
	PAYMENT_METHOD_CREDIT_CARD = 3;
	PAYMENT_METHOD_INVESTOR_MONEY = 4;
}

// PayOrderRequest represents a request to pay an order.
message PayOrderRequest {
	string order_uuid = 1;
	string user_uuid = 2;
	PaymentMethod payment_method = 3;
}

// PayOrderResponse represents a response to a pay order request.
message PayOrderResponse {
	string transaction_uuid = 1;
}