package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"
	"time"

	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"

	paymentV1 "github.com/Mahno9/GoMicroservicesCourse/shared/pkg/proto/payment/v1"
)

const (
	grpcPort = 50051
)

type paymentService struct {
	paymentV1.UnimplementedPaymentServiceServer
}

func (ps paymentService) PayOrder(c context.Context, req *paymentV1.PayOrderRequest) (*paymentV1.PayOrderResponse, error) {
	// TODO: Validate?

	time.Sleep(2 * time.Second)

	paymentUuid := uuid.New().String()
	log.Println("üÜó –û–ø–ª–∞—Ç–∞ –ø—Ä–æ—à–ª–∞ —É—Å–ø–µ—à–Ω–æ,", paymentUuid)

	return &paymentV1.PayOrderResponse{
		TransactionUuid: paymentUuid,
	}, nil
}

func main() {
	listener, err := net.Listen("tcp", fmt.Sprintf(":%d", grpcPort))
	if err != nil {
		log.Fatalf("‚ùó failed to listen: %v\n", err)
		return
	}
	defer func() {
		if err := listener.Close(); err != nil {
			log.Fatalf("‚ùó failed to close listener: %v\n", err)
		}
	}()

	grpcServer := grpc.NewServer()

	service := &paymentService{}
	paymentV1.RegisterPaymentServiceServer(grpcServer, service)

	reflection.Register(grpcServer)

	go func() {
		log.Printf("üëÇ gRPC server listening on port %d\n", grpcPort)
		err = grpcServer.Serve(listener)
		if err != nil {
			log.Fatalf("‚ùó failed to serve: %v\n", err)
			return
		}
	}()

	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	log.Println("üüß Shutting down gRPC server...")
	grpcServer.GracefulStop()
	log.Println("‚úÖ gRPC server gracefully stopped")
}
